src/kitemviews/kfileitemlistview.cpp
@@ -39,7 +39,8 @@ KFileItemListView::KFileItemListView(QGraphicsWidget* parent) :
     KStandardItemListView(parent),
     m_modelRolesUpdater(nullptr),
     m_updateVisibleIndexRangeTimer(nullptr),
-    m_updateIconSizeTimer(nullptr)
+    m_updateIconSizeTimer(nullptr),
+    m_scanDirectories(true)
 {
     setAcceptDrops(true);
 
@@ -115,6 +116,19 @@ void KFileItemListView::setLocalFileSizePreviewLimit(const qlonglong size)
 qlonglong KFileItemListView::localFileSizePreviewLimit() const
 {
     return m_modelRolesUpdater ? m_modelRolesUpdater->localFileSizePreviewLimit() : 0;
+}
+
+void KFileItemListView::setScanDirectories(bool enabled)
+{
+    m_scanDirectories = enabled;
+    if (m_modelRolesUpdater) {
+        m_modelRolesUpdater->setScanDirectories(m_scanDirectories);
+    }
+}
+
+bool KFileItemListView::scanDirectories()
+{
+    return m_scanDirectories;
 }
 
 QPixmap KFileItemListView::createDragPixmap(const KItemSet& indexes) const
@@ -247,6 +261,7 @@ void KFileItemListView::onModelChanged(KItemModelBase* current, KItemModelBase* 
     if (current) {
         m_modelRolesUpdater = new KFileItemModelRolesUpdater(static_cast<KFileItemModel*>(current), this);
         m_modelRolesUpdater->setIconSize(availableIconSize());
+        m_modelRolesUpdater->setScanDirectories(scanDirectories());
 
         applyRolesToModel();
     }
