src/kitemviews/kfileitemlistview.h
@@ -69,6 +69,13 @@ public:
     void setLocalFileSizePreviewLimit(qlonglong size);
     qlonglong localFileSizePreviewLimit() const;
 
+    /**
+     * If set to true, directories contents are scanned to determine their size
+     * Default true
+     */
+    void setScanDirectories(bool enabled);
+    bool scanDirectories();
+
     QPixmap createDragPixmap(const KItemSet& indexes) const override;
 
 protected:
@@ -118,6 +125,7 @@ private:
     KFileItemModelRolesUpdater* m_modelRolesUpdater;
     QTimer* m_updateVisibleIndexRangeTimer;
     QTimer* m_updateIconSizeTimer;
+    bool m_scanDirectories;
 
     friend class KFileItemListViewTest; // For unit testing
 };
